EXTRA_DIST =					\
	README.md				\
	bootstrap.sh				\
	prerequisites.sh			\
	snapcraft.yaml

dist_bin_SCRIPTS =				\
	bin/kvm-maas-add-node			\
	bin/kvm-maas-remove-node

dist_pkglibexec_SCRIPTS =			\
	libexec/kvm-maas/common.sh		\
	libexec/kvm-maas/node-accept		\
	libexec/kvm-maas/node-cleanup		\
	libexec/kvm-maas/virt-img-cleanup	\
	libexec/kvm-maas/virt-node-define
